<resources>
    <string name="app_name">FileManagers</string>

    <string name="contains_internal_storage_and_sd_card">Contains internal storage and SD card</string>
    <string name="bookmark">Bookmarks</string>
    <string name="hide">Hide</string>
    <string name="un_hide">Unhide</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Toolbar Title -->
    <string name="dashboard_title">Dashboard</string>
    <string name="my_files">My Files</string>
    <string name="my_photos">My Photos</string>
    <string name="file_copying">file copying..........</string>
    <string name="file_copy">file copied</string>
    <string name="file_move">file moved</string>

    <!--    menu title-->
    <string name="more">More</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="past">Past</string>
    <string name="rename">Rename</string>
    <string name="move">Move</string>

    <!--    file menu title-->
    <string name="sort">Sort</string>
    <string name="create_folder">Create Folder</string>
    <string name="create_file">Create File</string>
    <string name="view_options">View Options</string>
    <string name="set_as_Home_screen">Set as Home Screen</string>
    <string name="advance_setting">Advance Settings</string>
    <string name="close">Close</string>

    <!--    sub menu item of file menu item-->
    <string name="show_file_size">Show file size</string>
    <string name="show_folder_size">Show folder size</string>
    <string name="show_full_name_of_file">Show full name of file</string>
    <string name="show_hidden_file_and_folder">Show hidden file and folder</string>

<!--    flash activity text-->
    <string name="flash_activity_text_flash">Flash</string>
    <string name="flash_activity_text_2022">2022</string>

<!--    sort dialog text-->
    <string name="sort_name">Name</string>
    <string name="sort_size">Size</string>
    <string name="sort_modified_date">Date</string>
    <string name="sort_type">Type</string>
    <string name="sort_only_this_folder">Only this Folder</string>
    <string name="ascending_order">Ascending order</string>
    <string name="descending_order">Descending order</string>

<!--    rename dialog box-->
    <string name="rename_save">Save</string>
    <string name="rename_cancel">Cancel</string>
    <string name="rename_title">Rename</string>

<!--    properties dialog box-->
    <string name="properties">Properties</string>
    <string name="name">Name</string>
    <string name="path">Path</string>
    <string name="type">Type</string>
    <string name="last_modified">Last Modified</string>
    <string name="size">Size</string>
    <string name="file_count">File Count</string>
    <string name="directory">Directory</string>
    <string name="file">File</string>
<!--    make directory String -->
    <string name="make_directory_title">Create Folder</string>
    <string name="empty_string"> </string>

<!--    make file String -->
    <string name="make_file_title">Create File</string>

<!--    multiselect tool bar item string -->
    <string name="multi_select_delete">delete</string>
    <string name="multi_select_copy">copy</string>
    <string name="multi_select_past">past</string>

<!--    drawer Item name-->
    <string name="drawer_home">Home</string>
    <string name="drawer_internal_storage">Internal Storage</string>
    <string name="drawer_clouds">Clouds</string>
    <string name="drawer_collections">Collections</string>
    <string name="drawer_network">network</string>
    <string name="drawer_more">More</string>
    <string name="drawer_privacy_policy_terms">Privacy Policy Terms</string>

</resources>